added a lot of funcitonality. looks nicer too

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "robots",
+  "name": "aiim",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/isabelringing1/robots.git"
+    "url": "git+https://github.com/isabelringing1/aiim.git"
   },
   "author": "Isabel Lee",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/isabelringing1/robots/issues"
+    "url": "https://github.com/isabelringing1/aiim/issues"
   },
-  "homepage": "https://github.com/isabelringing1/robots#readme",
+  "homepage": "https://github.com/isabelringing1/aiim#readme",
   "dependencies": {
     "express": "^4.16.3",
     "express-static": "^1.2.5",
